--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
         </activity>
         <activity android:name=".MapsActivity" />
         <activity android:name=".MediaActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".VehicleActivity" />
+        <activity android:name=".HealthActivity"></activity>
     </application>
 
 </manifest>
