--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_health"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -31,18 +31,24 @@
 
         <activity
             android:name=".InfoActivity"
-            android:label="@string/title_activity_maps">
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapsActivity" />
-        <activity android:name=".MediaActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".VehicleActivity" />
-        <activity android:name=".HealthActivity"></activity>
+        <activity android:name=".MapsActivity"
+            android:screenOrientation="sensorLandscape"/>
+        <activity android:name=".MediaActivity"
+            android:screenOrientation="sensorLandscape"/>
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="sensorLandscape"/>
+        <activity android:name=".VehicleActivity"
+            android:screenOrientation="sensorLandscape"/>
+        <activity android:name=".HealthActivity"
+            android:screenOrientation="sensorLandscape"></activity>
     </application>
 
 </manifest>
